force-app/main/default/objects/copado__Pull_Request_Review__c/fields/copado__Pull_Request__c.field-meta.xml
<CustomField>
    <fullName>copado__Pull_Request__c</fullName>
    <label>Pull Request</label>
    <referenceTo>copado__Pull_Request__c</referenceTo>
    <relationshipName>Pull_Request_Reviews</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>